@@ -13,6 +13,7 @@ cupt (1.4.0~) UNRELEASED; urgency=low
           hierarchy declared a soft dependency on the package.
         - Apply 'automatically installed' penalty score to all versions of
           automatically installed packages, not only installed one.
+        - Don't perform inner auto-removal before of main resolver cycles.
     - Download:
       - Methods/Debdelta:
         - Suppress standard output from debpatch.
